Fix a couple of instances of splat colours not applying properly / fix vampire navicons in dark mode

--- a/display/vtm/styling/vampire-styling.less
+++ b/display/vtm/styling/vampire-styling.less
@@ -7,7 +7,7 @@
 
 /* Define splat-specific colours for the WOD5E Symbols */
 .wod5e .wod5e-symbol.vampire {
-  color: var(--vampire-color-1);
+  color: var(--vampire-color-3);
 }
 
 /* Vampire Actor Sheet */
@@ -71,8 +71,8 @@
     background-color: var(--vampire-color-2);
 
     .navicon .wod5e-symbol,
-    .item[data-tab="blood"] {
-      color: var(--vampire-color-1);
+    [data-tab="blood"] .navicon {
+      color: var(--vampire-color-2);
     }
 
     .active .navicon {
